# lorelie

./: .gitignore  AUTHORS.rst  CHANGELOG.md  Pipfile  README.md  _conn.py  _dev.py  _development.py  _foreign.py  _playground.py  _quick_types.py  _table_async.py  _tables.py  _testing.py  _trig.py  pyproject.toml  reference_list.sql  setup.cfg  setup.toml
_quartdemo/: app.py  test.http
lorelie/: README.md  __init__.py  _database.py  _development.py  _tables.py  _testing.py  aggregation.py  backends.py  constants.py  constraints.py  converters.py  database.py  exceptions.py  expressions.py  external.py  fields.py  functions.py  indexes.py  lorelie_typings.py  migrations.py  models.py  queries.py  tables.py  test_tables.py  transactions.py  validators.py
lorelie/database/: __init__.py  base.py  expression_filters.py  indexes.py  manager.py  migrations.py  nodes.py  old_migrations.py  triggers.py  views.py
lorelie/database/_functions/: window.py
lorelie/database/expressions/: base.py  mixins.py
lorelie/database/functions/: __init__.py  aggregation.py  base.py  dates.py  math.py  text.py  window.py
lorelie/database/tables/: base.py  columns.py
lorelie/fields/: __init__.py  base.py  relationships.py
lorelie/lorelie-stubs/: __init__.pyi  aggregation.pyi  backends.pyi  constraints.pyi  converters.pyi  database.pyi  exceptions.pyi  expressions.pyi  fields.pyi  functions.pyi  indexes.pyi  migrations.pyi  models.pyi  queries.pyi  tables.pyi  validators.pyi
lorelie/lorelie-stubs/database/: __init__.pyi  base.pyi  expression_filters.pyi  indexes.pyi  manager.pyi  migrations.pyi  nodes.pyi  triggers.pyi  views.pyi
lorelie/lorelie-stubs/fields/: base.pyi  relationships.pyi
lorelie/test/: testcases.py
lorelie/utils/: json_encoders.py
lorelie_docs/: README.md  package-lock.json  package.json  vite.config.js
lorelie_docs/src/: App.vue  main.js
lorelie_docs/src/components/: BaseCard.vue
lorelie_docs/src/data/: queries.json
lorelie_docs/src/layouts/: BaseLayout.vue
lorelie_docs/src/pages/: DatabasePage.vue  HomePage.vue  QueriesPage.vue
lorelie_docs/src/router/: index.js
tests/: __init__.py  _tables.py  _testing.py  items.py  migration.json  migration_empty.json  reference_list.sql  test_aggregation.py  test_backends.py  test_base_row.py  test_connections.py  test_constraints.py  test_converters.py  test_database.py  test_database_manager.py  test_expression_filters.py  test_expressions.py  test_fields.py  test_functions.py  test_global_structure.py  test_indexes.py  test_migrate.json  test_migration.json  test_migrations.py  test_nodes.py  test_queries.py  test_query.py  test_queryset.py  test_registry.py  test_sql.py  test_structure.py  test_tables.py  testcases.py
tests/database/: test_all.py  test_create.py  test_database.py  test_manager.py  test_triggers.py  test_views.py
tests/database/expressions/: test_expression_filters.py  test_sql.py
tests/database/functions/: test_aggregation.py  test_text.py
tests/database/querying/: test_create.py
tests/database/tables/: test_columns.py  test_manager.py  test_tables.py
tests/fields/: test_fields.py  test_relationships.py
tests/functions/: test_aggregation.py  test_dates.py  test_math.py  test_window.py
(+11 files in other folders)
