[project]
name = "lorelie"
version = "0.1.0"
description = "Lorelie is a lightweight ORM for Python, designed to simplify database interactions with an intuitive and expressive API."
keywords = ["ORM", "database", "Python", "SQLAlchemy", "SQLite"]
authors = [
    { name = "John Pendenque", email = "pendenquejohn@gmail.com" },
]
maintainers = [
    { name = "John Pendenque", email = "pendenquejohn@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",   
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "coverage>=7.13.1",
    "pytest>=9.0.1",
    "pandas>=2.3.3",
]
