[metadata]
name = lorelie
version = attr: lorelie.version.VERSION
description = Advanced database manager for SQLite
long_description = file: README.md, CHANGELOG.md, LICENSE.rst
keywords=database,sqlite,orm
license = MIT
author = John Pendenque
author_email = pendenquejohn@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.12
install_requires =
    airtable>=0.4.8
    beautifulsoup4==4.11.1
    boto3==1.26.8
    gspread
    jupyter
    nltk==3.7
    numpy==1.23.4
    pandas==1.5.1
    Pillow>=8.0.1
    psycopg==3.1.9
    pyaml==21.10.1
    pymemcache==4.0.0
    redis==4.4.2
    requests==2.28.1
    s3transfer==0.6.0
    unidecode
